src/ImguiSdlSharp.Native/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImGuiInputTextCallbackData_t ImGuiInputTextCallbackData;  
typedef int ImGuiDataType;       
typedef int ImGuiColorEditFlags;    
typedef int ImGuiInputTextFlags;    
typedef int ImGuiSliderFlags;       
typedef int (*ImGuiInputTextCallback)(ImGuiInputTextCallbackData* data);  
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t
{
    float x, y;
} ImVec2;
CIMGUI_API bool ImGui_ComboCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count);  
CIMGUI_API bool ImGui_ComboCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_SliderFloat2(const char* label, float v[2], float v_min, float v_max);                                                                                    
CIMGUI_API bool ImGui_SliderFloat2Ex(const char* label, float v[2], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat3(const char* label, float v[3], float v_min, float v_max);                                                                                    
CIMGUI_API bool ImGui_SliderFloat3Ex(const char* label, float v[3], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat4(const char* label, float v[4], float v_min, float v_max);                                                                                    
CIMGUI_API bool ImGui_SliderFloat4Ex(const char* label, float v[4], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderAngle(const char* label, float* v_rad);                                                                                                             
CIMGUI_API bool ImGui_SliderAngleEx(const char* label, float* v_rad, float v_degrees_min , float v_degrees_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt(const char* label, int* v, int v_min, int v_max);                                                                                               
CIMGUI_API bool ImGui_SliderIntEx(const char* label, int* v, int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt2(const char* label, int v[2], int v_min, int v_max);                                                                                            
CIMGUI_API bool ImGui_SliderInt2Ex(const char* label, int v[2], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt3(const char* label, int v[3], int v_min, int v_max);                                                                                            
CIMGUI_API bool ImGui_SliderInt3Ex(const char* label, int v[3], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt4(const char* label, int v[4], int v_min, int v_max);                                                                                            
CIMGUI_API bool ImGui_SliderInt4Ex(const char* label, int v[4], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max);                                             
CIMGUI_API bool ImGui_SliderScalarEx(const char* label, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_min, const void* p_max);                            
CIMGUI_API bool ImGui_SliderScalarNEx(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_VSliderFloat(const char* label, ImVec2 size, float* v, float v_min, float v_max);                                                                         
CIMGUI_API bool ImGui_VSliderFloatEx(const char* label, ImVec2 size, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_VSliderInt(const char* label, ImVec2 size, int* v, int v_min, int v_max);                                                                                 
CIMGUI_API bool ImGui_VSliderIntEx(const char* label, ImVec2 size, int* v, int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_VSliderScalar(const char* label, ImVec2 size, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max);                               
CIMGUI_API bool ImGui_VSliderScalarEx(const char* label, ImVec2 size, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_InputText(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags );                              
CIMGUI_API bool ImGui_InputTextEx(const char* label, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool ImGui_InputTextMultiline(const char* label, char* buf, size_t buf_size);                                                          
CIMGUI_API bool ImGui_InputTextMultilineEx(const char* label, char* buf, size_t buf_size, ImVec2 size , ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool ImGui_InputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags );    
CIMGUI_API bool ImGui_InputTextWithHintEx(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags , ImGuiInputTextCallback callback , void* user_data );
CIMGUI_API bool ImGui_InputFloat(const char* label, float* v);                                                                                    
CIMGUI_API bool ImGui_InputFloatEx(const char* label, float* v, float step , float step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat2(const char* label, float v[2]);                                                                                 
CIMGUI_API bool ImGui_InputFloat2Ex(const char* label, float v[2], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat3(const char* label, float v[3]);                                                                                 
CIMGUI_API bool ImGui_InputFloat3Ex(const char* label, float v[3], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputFloat4(const char* label, float v[4]);                                                                                 
CIMGUI_API bool ImGui_InputFloat4Ex(const char* label, float v[4], const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt(const char* label, int* v);                                                                                        
CIMGUI_API bool ImGui_InputIntEx(const char* label, int* v, int step , int step_fast , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt2(const char* label, int v[2], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt3(const char* label, int v[3], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputInt4(const char* label, int v[4], ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputDouble(const char* label, double* v);                                                                                  
CIMGUI_API bool ImGui_InputDoubleEx(const char* label, double* v, double step , double step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputScalar(const char* label, ImGuiDataType data_type, void* p_data);                                                      
CIMGUI_API bool ImGui_InputScalarEx(const char* label, ImGuiDataType data_type, void* p_data, const void* p_step , const void* p_step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_InputScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components);                                     
CIMGUI_API bool ImGui_InputScalarNEx(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_step , const void* p_step_fast , const char* format , ImGuiInputTextFlags flags );
CIMGUI_API bool ImGui_ColorEdit3(const char* label, float col[3], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ColorEdit4(const char* label, float col[4], ImGuiColorEditFlags flags );
CIMGUI_API bool ImGui_ListBoxCallback(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef struct ImGuiInputTextCallbackData_t
{
    ImGuiInputTextFlags EventFlag;       
    ImGuiInputTextFlags Flags;           
    void*               UserData;        
    ImWchar             EventChar;       
    ImGuiKey            EventKey;        
    char*               Buf;             
    int                 BufTextLen;      
    int                 BufSize;         
    bool                BufDirty;        
    int                 CursorPos;       
    int                 SelectionStart;  
    int                 SelectionEnd;    
} ImGuiInputTextCallbackData;