src/ImguiSdlSharp/Native.cs


        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloat2(byte* label, float* v, float v_min, float v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloat2Ex(byte* label, float* v, float v_min, float v_max, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloat3(byte* label, float* v, float v_min, float v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloat3Ex(byte* label, float* v, float v_min, float v_max, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloat4(byte* label, float* v, float v_min, float v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderFloat4Ex(byte* label, float* v, float v_min, float v_max, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderAngle(byte* label, float* v_rad);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderAngleEx(byte* label, float* v_rad, float v_degrees_min /* = -360.0f */, float v_degrees_max /* = +360.0f */, byte* format /* = "%.0f deg" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderInt(byte* label, int* v, int v_min, int v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderIntEx(byte* label, int* v, int v_min, int v_max, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderInt2(byte* label, int* v, int v_min, int v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderInt2Ex(byte* label, int* v, int v_min, int v_max, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderInt3(byte* label, int* v, int v_min, int v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderInt3Ex(byte* label, int* v, int v_min, int v_max, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderInt4(byte* label, int* v, int v_min, int v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderInt4Ex(byte* label, int* v, int v_min, int v_max, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderScalar(byte* label, ImGuiDataType data_type, void* p_data, void* p_min, void* p_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderScalarEx(byte* label, ImGuiDataType data_type, void* p_data, void* p_min, void* p_max, byte* format = default, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderScalarN(byte* label, ImGuiDataType data_type, void* p_data, int components, void* p_min, void* p_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_SliderScalarNEx(byte* label, ImGuiDataType data_type, void* p_data, int components, void* p_min, void* p_max, byte* format = default, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_VSliderFloat(byte* label, ImVec2 size, float* v, float v_min, float v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_VSliderFloatEx(byte* label, ImVec2 size, float* v, float v_min, float v_max, byte* format = default /* = "%.3f" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_VSliderInt(byte* label, ImVec2 size, int* v, int v_min, int v_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_VSliderIntEx(byte* label, ImVec2 size, int* v, int v_min, int v_max, byte* format = default /* = "%d" */, ImGuiSliderFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_VSliderScalar(byte* label, ImVec2 size, ImGuiDataType data_type, void* p_data, void* p_min, void* p_max);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_VSliderScalarEx(byte* label, ImVec2 size, ImGuiDataType data_type, void* p_data, void* p_min, void* p_max, byte* format = default, ImGuiSliderFlags flags = default);

        #endregion

        #region Widgets: Input with Keyboard

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputText(byte* label, char* buf, nuint buf_size, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputTextEx(byte* label, char* buf, nuint buf_size, ImGuiInputTextFlags flags = default, ImGuiInputTextCallback callback = default, void* user_data = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputTextMultiline(byte* label, char* buf, nuint buf_size);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputTextMultilineEx(byte* label, char* buf, nuint buf_size, ImVec2 size = default, ImGuiInputTextFlags flags = default, ImGuiInputTextCallback callback = default, void* user_data = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputTextWithHint(byte* label, byte* hint, char* buf, nuint buf_size, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputTextWithHintEx(byte* label, byte* hint, char* buf, nuint buf_size, ImGuiInputTextFlags flags = default, ImGuiInputTextCallback callback = default, void* user_data = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloat(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloatEx(byte* label, float* v, float step = default, float step_fast = default, byte* format = default /* = "%.3f" */, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloat2(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloat2Ex(byte* label, float* v, byte* format = default /* = "%.3f" */, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloat3(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloat3Ex(byte* label, float* v, byte* format = default /* = "%.3f" */, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloat4(byte* label, float* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputFloat4Ex(byte* label, float* v, byte* format = default /* = "%.3f" */, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputInt(byte* label, int* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputIntEx(byte* label, int* v, int step = 1, int step_fast = 100, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputInt2(byte* label, int* v, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputInt3(byte* label, int* v, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputInt4(byte* label, int* v, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputDouble(byte* label, double* v);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputDoubleEx(byte* label, double* v, double step /* = 0.0 */, double step_fast /* = 0.0 */, byte* format /* = "%.6f" */, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputScalar(byte* label, ImGuiDataType data_type, void* p_data);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputScalarEx(byte* label, ImGuiDataType data_type, void* p_data, void* p_step = default, void* p_step_fast = default, byte* format = default, ImGuiInputTextFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputScalarN(byte* label, ImGuiDataType data_type, void* p_data, int components);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_InputScalarNEx(byte* label, ImGuiDataType data_type, void* p_data, int components, void* p_step = default, void* p_step_fast = default, byte* format = default, ImGuiInputTextFlags flags = default);

        #endregion

        #region Widgets: Color Editor/Picker

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ColorEdit3(byte* label, float* col, ImGuiColorEditFlags flags = default);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ImGui_ColorEdit4(byte* label, float* col, ImGuiColorEditFlags flags = default);
